--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,4 @@ jobs:
       with:
         java-version: 11
     - name: Test
-      uses: eskatos/gradle-command-action@v1
-      with:
-        arguments: check
+      run: ./gradlew check
